UI changes(Spacing Issue)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,14 @@ body {
   padding: 0px;
 }
 
+.css-73imaa {
+  padding: 0px;
+}
+
+.css-pc7201{
+  padding: 0px;
+}
+
 .css-j204z7-MuiFormControlLabel-root.Mui-disabled {
   margin-top: 5px;
   height: 30px;
